Fixed dropdown labels and fixed full bleed teaser

--- a/source/assets/css/content/_headers.scss
+++ b/source/assets/css/content/_headers.scss
@@ -73,6 +73,7 @@ h2 {
 
 		margin-bottom: $basicPush * 3;
 		padding-bottom: 25px !important;
+		border-bottom: none;
 
 		&:after {
 			position: absolute;
