--- a/source/widgets/full_bleed_teaser/full_bleed_teaser.scss
+++ b/source/widgets/full_bleed_teaser/full_bleed_teaser.scss
@@ -1,5 +1,4 @@
 .widg_full_bleed_teaser {
-	margin-right: -1 * span(4.9);
 	margin-bottom: $basicPush * 2;
 	position: relative;
 
@@ -9,9 +8,9 @@
 }
 
 .full_bleed_teaser__img {
-	@include bleedFull();
+	@include bleedFull($gutterWidth);
 
-	margin-right: -1 * span(1.7);
+	height: 640px;
 }
 
 .full_bleed_teaser__text {
@@ -22,9 +21,12 @@
 
 	transform: translateY(-50%);
 
+	padding: 10px;
+
 	h2 {
 		position: relative;
 		margin-bottom: $basicPush * 2;
+		border-bottom: none;
 
 		&:after {
 			display: block;
